week 6 hw done